# zephyr-drivers-stmicro

./: CMakeLists.txt  Kconfig  README.md
drivers/: CMakeLists.txt  Kconfig
drivers/stmicro/: CMakeLists.txt  Kconfig
drivers/stmicro/iis2dh/: CMakeLists.txt  Kconfig  development-defines-stmicro.h  iis2dh.c  iis2dh.h
dts/bindings/: stmicro,iis2dh.yml
include/: stmicro-out-of-tree-common.h
